--- a/app/views/customers/show.html.haml
+++ b/app/views/customers/show.html.haml
@@ -1,4 +1,6 @@
-%p#notice= notice
+%h1
+  Customer
+  = @customer.matchcode
 
 %p
   %b Matchcode:
@@ -19,3 +21,4 @@
 = link_to 'Edit', edit_customer_path(@customer)
 \|
 = link_to 'Back', customers_path
+
