--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,8 @@
-%h1 Home#index
-%p Find me in app/views/home/index.html.haml
+%h1 Welcome to ABT
+
+%dl
+  - @stats.each do |name, value|
+    %dt
+      = name.capitalize
+      %dd
+        = value
