--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,7 +1,7 @@
 = link_to "ABT", root_path, :class => 'brand'
 %ul.nav
   %li
-    %a Hi there!
+    = link_to('Customers', customers_path)
 
 -#  - if user_signed_in?
 -#    %li
