--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -1,4 +1,6 @@
-= form_for @customer do |f|
+
+.fieldset
+= simple_form_for @customer, :validation => true, :html => {:class => 'form-horizontal' } do |f|
   - if @customer.errors.any?
     #error_explanation
       %h2= "#{pluralize(@customer.errors.count, "error")} prohibited this customer from being saved:"
@@ -6,21 +8,12 @@
         - @customer.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :matchcode
-    = f.text_field :matchcode
-  .field
-    = f.label :name
-    = f.text_area :name, :rows => 2
-  .field
-    = f.label :address
-    = f.text_area :address, :rows => 5
-  .field
-    = f.label :time_budget
-    = f.text_field :time_budget
-    hours
-  .field
-    = f.label :notes
-    = f.text_area :notes, :rows => 5
-  .actions
-    = f.submit 'Save'
+  = f.input :matchcode, :input_html => { :class => "span6" }
+  = f.input :name, :input_html => { :class => "span6", :rows => 2 }
+  = f.input :address, :input_html => { :class => "span6", :rows => 3 }
+  = f.input :time_budget
+  = f.input :notes, :input_html => { :class => "span6", :rows => 5 }
+
+  .form-actions
+    = f.button :submit, :class => 'btn-primary'
+    = link_to 'Cancel', @customer, :class => "btn btn-danger"
