add Project model

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,6 +2,8 @@
 %ul.nav
   %li
     = link_to('Customers', customers_path)
+  %li
+    = link_to('Projects', projects_path)
 
 -#  - if user_signed_in?
 -#    %li
