--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -1,4 +1,3 @@
-
 .fieldset
 = simple_form_for @customer, :validation => true, :html => {:class => 'form-horizontal' } do |f|
   - if @customer.errors.any?
@@ -8,11 +7,13 @@
         - @customer.errors.full_messages.each do |msg|
           %li= msg
 
-  = f.input :matchcode, :input_html => { :class => "span6" }
-  = f.input :name, :input_html => { :class => "span6", :rows => 2 }
-  = f.input :address, :input_html => { :class => "span6", :rows => 3 }
-  = f.input :time_budget
-  = f.input :notes, :input_html => { :class => "span6", :rows => 5 }
+  .form-inputs
+    = f.input :matchcode, :input_html => { :class => "span6" }
+    = f.input :name, :input_html => { :class => "span6", :rows => 2 }
+    = f.input :address, :input_html => { :class => "span6", :rows => 3 }
+    = f.input :time_budget
+    = f.input :notes, :input_html => { :class => "span6", :rows => 5 }
+    = f.association :sales_tax_customer_class
 
   .form-actions
     = f.button :submit, :class => 'btn-primary'
