--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -4,6 +4,13 @@
     = link_to('Customers', customers_path)
   %li
     = link_to('Projects', projects_path)
+  %li.dropdown
+    %a.dropdown-toggle{:data => {:toggle => :dropdown}, :href => "#"}
+      Configuration
+      %b.caret
+    %ul.dropdown-menu
+      %li
+        = link_to('Sales Tax', sales_tax_rates_path)
 
 -#  - if user_signed_in?
 -#    %li
