--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -4,6 +4,7 @@
     = link_to('Customers', customers_path)
   %li
     = link_to('Projects', projects_path)
+%ul.nav.pull-right
   %li.dropdown
     %a.dropdown-toggle{:data => {:toggle => :dropdown}, :href => "#"}
       Configuration
