--- a/app/views/sales_tax_rates/index.html.haml
+++ b/app/views/sales_tax_rates/index.html.haml
@@ -64,6 +64,7 @@
                 Create
 %br
 
+%i.icon-plus
 = link_to 'New Tax Rate', new_sales_tax_rate_path
 \|
 = link_to 'Edit Customer Classes', sales_tax_customer_classes_path
