--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -1,12 +1,13 @@
-= simple_form_for(@project) do |f|
+.fieldset
+= simple_form_for(@project, :validation => true, :html => {:class => 'form-horizontal'}) do |f|
   = f.error_notification
 
   .form-inputs
-    = f.input :matchcode
-    = f.input :description
+    = f.input :matchcode, :input_html => { :class => "span6" }
+    = f.input :description, :input_html => { :class => "span6", :rows => 3 }
     = f.input :time_budget
     = f.association :bill_to_customer
-    -#, :collection => Customer.all
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, :class => 'btn-primary'
+    = link_to 'Cancel', @project, :class => "btn btn-danger"
