--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,7 +8,23 @@
         = value
 
 %div
-  - if not @is_setup_done
+  %dl
+    %dt
+      Company Name:
+      %dd
+        = @data[:issuer_company].name
+    %dt
+      Address:
+      %dd
+        %address
+          = @data[:issuer_company].address.gsub("\n", ', ')
+    %dt
+      VAT ID:
+      %dd
+        = @data[:issuer_company].vat_id
+
+%div
+  - if not @data[:is_setup_done]
     %p
       Quick start: setup sales tax for your country:
     %p
