Assign document numbers and make stuff usable

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -23,3 +23,7 @@ body { padding-top: 60px; }
 .footer-links li:first-child {
   padding-left: 0;
 }
+
+.button_to, .button_to div {
+  display: inline;
+}
