--- a/app/views/invoices/book.html.erb
+++ b/app/views/invoices/book.html.erb
@@ -1,3 +1,4 @@
+<h1>Book invoice</h1>
 
 Document Number: <%= @invoice.document_number %><br>
 published: <%= @invoice.published %><br>
@@ -8,12 +9,11 @@ published: <%= @invoice.published %><br>
 <%= @booking_log.join("\n") -%>
 </pre>
 
-<%= link_to 'Preview', preview_invoice_path(@invoice), :class => 'btn btn-default' %>
-<% unless @booking_failed %>
-<%= link_to 'Book!', book_invoice_path(@invoice, :save => true), :class => 'btn btn-warning' %>
+<% if @booked and !@invoice.published? %>
+<%= link_to 'Preview', preview_invoice_path(@invoice), :class => 'btn btn-default' %> &nbsp;
+<%= button_to 'Book!', book_invoice_path(@invoice, :save => true), :class => 'btn btn-warning' %>
 <% end %>
 
 <% if @invoice.attachment %>
 <%= link_to 'PDF', attachment_path(@invoice.attachment) %>
 <% end %>
-
