--- a/app/views/invoices/edit.html.haml
+++ b/app/views/invoices/edit.html.haml
@@ -1,108 +1,7 @@
-%h1 Editing invoice
+%h1 Editing invoice draft
 
 = render 'form'
 
-- unless @invoice.published
+%br
 
-  %h2 Lines
-  %pre
-    = json_for(@invoice.invoice_lines)
-  %div{'ng-app' => 'invoiceLinesApp'}
-    %div{'ng-controller' => 'InvoiceLinesController', 'ng-init' => 'setLines(' + json_for(@invoice.invoice_lines) + ')'}
-      %form
-        %div{'ng-repeat' => 'line in lines'}
-          .row
-            .col-sm-2
-              %select.form-control{'ng-model' => 'line.type', 'ng-required' => 'true'}
-                %option{:value => 'subheading'}
-                  Subheading
-                %option{:value => 'text'}
-                  Text
-                %option{:value => 'item'}
-                  Item
-            .col-sm-9
-              %input.form-control{'ng-model' => 'line.title', 'ng-required' => 'true'}
-            .col-sm-1
-              %button.btn.btn-danger{'ng-click' => 'removeLine(line)'}
-                Trash
-
-          .row{'ng-hide' => 'line.type == "subheading"'}
-            .col-sm-12
-              .form-group
-                %label
-                  Description:
-                %textarea.form-control{'ng-model' => 'line.description', 'ng-required' => 'line.type != \'subheading\''}
-          .row{'ng-hide' => 'line.type != "item"'}
-            .col-sm-4.col-md-2
-              .form-group
-                %label
-                  Rate:
-                %input.form-control{'ng-model' => 'line.rate', :type => 'number', 'ng-required' => 'line.type != \'item\''}
-            .col-sm-4.col-md-2
-              .form-group
-                %label
-                  Quantity:
-                %input.form-control{'ng-model' => 'line.quantity', :type => 'number', 'ng-required' => 'line.type != \'item\''}
-            .col-sm-4.col-md-2
-              .form-group
-                %label
-                  Product class:
-                %select.form-control{'ng-model' => 'line.sales_tax_product_class_id', 'ng-options' => 'o.id as o.name for o in sales_tax_product_classes', 'ng-required' => 'line.type != \'item\''}
-            .col-sm-4.col-md-2.pull-right
-              .form-group
-                %label
-                  Net:
-                %br
-                %b
-                  {{ line.quantity * line.rate }}
-          %hr
-
-      %br
-
-      .btn.btn-info{'ng-click' => 'addLine()'}
-        + Add Line
-
-      .row
-        .col-sm-2
-          %b
-            Total:
-        .col-sm-2
-          %b.text-right
-            {{ invoice_total() }}
-
-      %br
-
-      %button.btn.btn-primary{'ng-click' => 'saveLines()', :type => 'submit'}
-        Save Invoice and Lines
-      %br
-      %br
-
-- else
-  - @invoice.invoice_lines.each do |line|
-    .row
-      .col-sm-12
-        %b
-          = line.title
-    .row
-      .col-sm-12
-        = line.description
-    .row
-      .col-sm-4.col-md-2
-        Rate:
-        = line.rate
-      .col-sm-4.col-md-2
-        Quantity:
-        = line.quantity
-      .col-sm-4.col-md-2
-        Product class:
-        = line.sales_tax_product_class.name
-      .col-sm-4.col-md-2.pull-right
-        Net:
-        = line.quantity * line.rate
-
-
-
-
-= link_to 'Show', @invoice
-\|
-= link_to 'Back', invoices_path
+= link_to 'Cancel', invoices_path
