--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -59,7 +59,7 @@
 
     <div ng-app="invoiceLinesApp">
         <div ng-controller='InvoiceLinesController' ng-init="setLines(<%=json_for(@invoice.invoice_lines)%>); takeOverForm()">
-            <div ng-repeat="line in lines">
+            <div ng-repeat="line in lines" ng-controller="InvoiceLinesLineController">
                 <!-- begin line -->
                 <div class="row">
                     <div class="col-sm-2">
@@ -69,11 +69,25 @@
                             <option value="item">Item</option>
                         </select>
                         </div>
-                    <div class="col-sm-9">
+                    <div class="col-sm-8">
                         <input class="form-control" ng-model="line.title" required="required">
                     </div>
-                    <div class="col-sm-1">
+                    <div class="col-sm-2 pull-right">
+                        <button class="btn btn-info" type="button" ng-click="showProductDropdown()" ng-hide="line.type != 'item'">...</button>
                         <button class="btn btn-danger" type="button" ng-click="removeLine(line)">Trash</button>
+                    </div>
+                </div>
+                <div class="row" ng-hide="!isProductDropdownShown">
+                    <div class="col-sm-10">
+                        <div class="form-group">
+                            <select class="form-control" ng-model="product_dropdown_product"
+                                    ng-options="o as o.title for o in products"></select>
+                        </div>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="form-group">
+                            <button class="btn btn-danger" type="button" ng-click="useSelectedProduct()">Load it</button>
+                        </div>
                     </div>
                 </div>
                 <div class="row" ng-hide="line.type == 'subheading'">
