--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -7,6 +7,8 @@
     %li
       = link_to('Projects', projects_path)
     %li
+      = link_to('Catalog', products_path)
+    %li
       = link_to('Invoices', invoices_path)
   %ul.nav.navbar-nav.navbar-right
     %li.dropdown
