Fix broken icons

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -24,5 +24,5 @@
 
 <br />
 
-<i class="icon-plus"></i>
+<span class="glyphicon glyphicon-plus"></span>
 <%= link_to 'New Product', new_product_path %>
