Add plaintext line type

--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -66,6 +66,7 @@
                         <select class="form-control" ng-model="line.type" required="required">
                             <option value="subheading">Subheading</option>
                             <option value="text">Text</option>
+                            <option value="plain">Plaintext</option>
                             <option value="item">Item</option>
                         </select>
                         </div>
