--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -73,9 +73,9 @@
                     <div class="col-sm-8">
                         <input class="form-control" ng-model="line.title" required="required">
                     </div>
-                    <div class="col-sm-2 pull-right">
+                    <div class="col-sm-2 text-right">
                         <button class="btn btn-info" type="button" ng-click="showProductDropdown()" ng-hide="line.type != 'item'">...</button>
-                        <button class="btn btn-danger" type="button" ng-click="removeLine(line)">Trash</button>
+                        <button class="btn btn-danger" type="button" ng-click="removeLine(line)"><span class="glyphicon glyphicon-trash"></span></button>
                     </div>
                 </div>
                 <div class="row" ng-hide="!isProductDropdownShown">
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col-sm-2">
                         <div class="form-group">
-                            <button class="btn btn-danger" type="button" ng-click="useSelectedProduct()">Load it</button>
+                            <button class="btn btn-success" type="button" ng-click="useSelectedProduct()"><span class="glyphicon glyphicon-ok"></span></button>
                         </div>
                     </div>
                 </div>
