Add page-header where needed

--- a/app/views/invoices/book.html.erb
+++ b/app/views/invoices/book.html.erb
@@ -1,4 +1,4 @@
-<h1>Book invoice</h1>
+<h1 class="page-header">Book invoice</h1>
 
 Document Number: <%= @invoice.document_number %><br>
 published: <%= @invoice.published %><br>
