--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing products</h1>
+<h1 class="page-header">Listing products</h1>
 
 <table class="table table-striped table-condensed">
   <tr>
