--- a/app/views/sales_tax_product_classes/index.html.haml
+++ b/app/views/sales_tax_product_classes/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Listing Sales Tax Product Classes
+%h1.page-header Listing Sales Tax Product Classes
 
 %table.table.table-striped.table-condensed
   %tr
