Add email to customers
Required for vaulted payments

--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -7,6 +7,7 @@
     = f.input :name, :input_html => { :class => "span6", :rows => 2 }
     = f.input :address, :input_html => { :class => "span6", :rows => 3 }
     = f.input :vat_id, :input_html => { :rows => 1 }, :label => 'VATID'
+    = f.input :email, :input_html => { :rows => 1 }, :label => 'E-Mail'
     = f.input :time_budget
     = f.input :notes, :input_html => { :class => "span6", :rows => 5 }
     = f.association :sales_tax_customer_class
