Invoice lines: allow entering fractions again

--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -105,13 +105,13 @@
                     <div class="col-sm-4 col-md-2">
                         <div class="form-group">
                             <label>Rate</label>
-                            <input class="form-control" type="number" ng-model="line.rate" ng-required="line.type != 'item'">
+                            <input class="form-control" type="number" step="any" ng-model="line.rate" ng-required="line.type != 'item'">
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-2">
                         <div class="form-group">
                             <label>Quantity</label>
-                            <input class="form-control" type="number" ng-model="line.quantity" ng-required="line.type != 'item'">
+                            <input class="form-control" type="number" step="any" ng-model="line.quantity" ng-required="line.type != 'item'">
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-2">
