Upgrade to rails 6.0

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %title= content_for?(:title) ? yield(:title) : "Abt"
     = csrf_meta_tags
+    = csp_meta_tag
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
     = yield :head
