--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,4 +19,4 @@
       %footer.footer
         .container
           %p
-            &copy; 2014 Deduktiva GmbH
+            &copy; 2014-2025 Deduktiva GmbH
