--- a/app/views/invoices/_form.html.haml
+++ b/app/views/invoices/_form.html.haml
@@ -62,6 +62,10 @@
                 = format_currency(0)
 
         %br{clear: 'all'}
+        - unless @invoice.id.nil?
+          %button.btn.btn-info.float-end{type: 'button', data: {action: 'click->invoice-lines#addLine'}}
+            + Add Line
+        %br{clear: 'all'}
 
   %br
   = action_buttons_wrapper do
@@ -69,6 +73,3 @@
     - unless @invoice.id.nil?
       = button_to 'Test Booking', test_booking_invoice_path(@invoice), method: :post, class: 'btn btn-warning', data: { 'turbo-confirm': 'This will save your changes and run a test booking calculation. Continue?' }
     = cancel_button(@invoice)
-    - unless @invoice.id.nil?
-      %button.btn.btn-info{type: 'button', data: {action: 'click->invoice-lines#addLine'}}
-        + Add Line
