Clearly mark line total as net

--- a/app/views/invoices/_invoice_line_fields.html.haml
+++ b/app/views/invoices/_invoice_line_fields.html.haml
@@ -53,5 +53,5 @@
       .col-sm-3
       .col-sm-2.text-end
         .mb-3
-          %label.form-label Total
+          %label.form-label Net
           .form-control-plaintext{data: {line_total: true}} ...
